maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:65: error: not found: value isFaceMur
    if (isFaceMur() && isDirectionFree(Direction.NORD))
        ^